force-app/main/default/objects/FOPS_Consultant_Skill__c/FOPS_Consultant_Skill__c.object-meta.xml
<CustomObject>
    <description>Junction: Contact (Consultant record type) to Skill (Product2).</description>
    <label>Consultant Skill</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultant Skills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>