force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Certified__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Certified__c</fullName>
    <label>Certified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>