force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Consultant__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Consultant__c</fullName>
    <label>Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>FOPS_Consultant_Skills</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>