force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Last_Used__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Last_Used__c</fullName>
    <label>Last Used</label>
    <type>Date</type>
</CustomField>