force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Proficiency__c</fullName>
    <label>Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Proficient</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>