force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Proficiency_Score__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Proficiency_Score__c</fullName>
    <label>Proficiency Score</label>
    <formula>CASE(TEXT(FOPS_Proficiency__c), 'Expert', 4, 'Proficient', 3, 'Working', 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>