force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Skill__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Consultant Skills</relationshipLabel>
    <relationshipName>FOPS_Consultant_Skills</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>