force-app/main/default/objects/FOPS_Consultant_Skill__c/fields/FOPS_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Years_Experience__c</fullName>
    <label>Years Experience</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>